1. fixed ai chat bot mobile view issue 2. horizontal scrolling on total webiset fixed 3. b2b mobile view fixed 2nd time 4. testimonials view 50% done in desktop view 5. FAQ seciton is done in both mobile and desktop view

--- a/assets/css/section2-slider.css
+++ b/assets/css/section2-slider.css
@@ -17,12 +17,7 @@
     border-radius: 10px;
     transition: transform 0.3s; /* Add a smooth transition for scaling */
 }
-/* Style for the second image in the slide */
-.s2-slide img:nth-child(2) {
-    width: 183px; /* Make the second image larger */
-    height: 380px;
-    transform: scale(1.1); /* Optional: Slightly enlarge the second image */
-}
+
 .s2-progress-container {
     display: flex;
     justify-content: space-between;
@@ -66,6 +61,7 @@
   }
   
 @media (max-width: 767px) {
+   
     .s2-progress-item {
         width: 100%;
         display: none;
