--- a/assets/css/testimonials.css
+++ b/assets/css/testimonials.css
@@ -65,31 +65,25 @@
 }
 
 .s5-progress-container {
-    width: 630px;
+    width: 800px;
     height: 6px;
     margin: 178px 0 0 333px;
     padding: 0 465.7px 0 0;
     background-color: #d8d8d8;
-
     display: flex;
-    /* align-items: center; */
     overflow: hidden;
+    text-align: justify;
 }
 
 .s5-progress-bar {
     background-color: #21db04;
     height: 100%;
-    width: 0;
     animation: grow 2s linear infinite;
     transform-origin: left;
 }
 
 @keyframes grow {
-    0% {
-        width: 0;
-    }
-
-    100% {
+    to {
         width: 100%;
     }
 }
